[gd_scene load_steps=6 format=3 uid="uid://efy7iuhbld6x"]

[ext_resource type="Script" path="res://scenes/spawner/spawner.gd" id="1_iwbrr"]
[ext_resource type="PackedScene" uid="uid://f4bsd4tx4wp6" path="res://scenes/enemies/spinner/spinner.tscn" id="3_beunt"]
[ext_resource type="PackedScene" uid="uid://ctxu11dajpxve" path="res://scenes/enemies/spider/spider.tscn" id="4_mhnhl"]
[ext_resource type="PackedScene" uid="uid://dudxc53fwh0b8" path="res://scenes/enemies/copter/copter.tscn" id="5_047qu"]

[sub_resource type="Curve2D" id="Curve2D_6q2pb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1000, 0, 0, 0, 0, 0, 1000, 496, 0, 0, 0, 0, 0, 496, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Spawner" type="Node"]
script = ExtResource("1_iwbrr")
spawable_enemies = Array[PackedScene]([ExtResource("4_mhnhl"), ExtResource("3_beunt"), ExtResource("5_047qu")])

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="SpawnerPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_6q2pb")

[node name="SpawnerLocation" type="PathFollow2D" parent="SpawnerPath"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
